Added JavaDocs